A couple of final changes for W01 Project - Home Page

--- a/styles/small.css
+++ b/styles/small.css
@@ -65,7 +65,7 @@ header nav {
     flex-direction: column;
     top: 100%;
     left: 0;
-    width: 100vw;
+    width: 100%;
     background-color: var(--color1);
 }
 
