--- a/chamber/styles/base-small.css
+++ b/chamber/styles/base-small.css
@@ -94,8 +94,6 @@ header nav a:hover {
 }
 
 
-
-
 /***************************** HAMBURGER *****************************/
 .hamburger {
     background: none;
@@ -116,139 +114,43 @@ header nav a:hover {
 
 /***************************** MAIN *****************************/
 main {
+    display: flex;
+    flex-direction: column;
+}
+section.body {
     display: grid;
     padding: 6px 12px;
     grid-template-columns: auto;
     row-gap: 10px;
 }
 
-main h1 {
+section.body h1 {
     margin: 0;
     color: var(--color1);
     font-weight: 700;
     font-size: 1.6rem;
 }
 
-/***************************** SECTIONS *****************************/
-section {
-    display: grid;
-    grid-template-rows: auto 1fr;
+/***************************** BOX *****************************/
+section.box {
+    background-color: white;
+    border: solid 2px black;
+    border-radius: 10px;
 }
-
-section h2 {
-    display: block;
-    font-weight: 700;
+section.box h2 {
     background-color: var(--color2);
-    color: var(--color2-text);
-    text-align: center;
-    padding: 4px 8px;
-    border-radius: 10px 10px 0 0;
-}
-
-/***************************** DIRECTORY MEMBERS *****************************/
-div.directory-btns {
-    text-align: center;
-}
-
-div.directory-btns img {
-    width: 44px;
-    height: auto;
-    margin: 4px 8px;
-    cursor: pointer;
-}
-
-div.grid {
-    display: grid;
-    grid-gap: 0.5rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    align-items: center;
-    justify-content: center;
-}
-
-section.member {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 4px 8px;
-    box-sizing: border-box;
-    min-width: 250px;
-    height: 100%;
-}
-
-section.member div.name {
-    color: var(--color1);
-    font-weight: 700;
-}
-
-section.member img {
-    width: 150px;
-    border-radius: 10px;
-    margin: 8px;
-    height: auto;
-}
-
-section.member a,
-table.directory tbody a {
-    color: var(--color2);
-    font-weight: bold;
-    text-decoration: none;
-}
-
-section.member a:hover,
-table.directory tbody a:hover {
-    color: var(--color1);
-}
-
-
-table.directory {
-    border: solid 1px #000;
-    width: 100%;
-}
-
-table.directory thead th {
-    background-color: var(--color1);
-    color: var(--color1-text);
+    color: white;
     font-weight: 700;
     padding: 4px 8px;
+    border-bottom: solid 1px black;
+    border-radius: 8px 8px 0 0;
 }
-
-table.directory thead {
-    display: none;
-}
-
-table.directory tbody td {
-    background-color: white;
+section.box div {
     padding: 4px 8px;
 }
-
-table.directory tbody td.large {
-    display: none;
+section.box p:not(:first-child) {
+    margin-top: 20px;
 }
-
-table.directory tbody td.small {
-    display: grid;
-    grid-template-columns: 0.75fr 1fr;
-    gap: 5px;
-}
-
-table.directory tbody td.small span.label {
-    text-align: right;
-    font-weight: bold;
-    color: var(--color1);
-}
-
-table.directory tbody td.small span,
-table.directory tbody td.small a {
-    font-size: 0.8rem;
-}
-
-table.directory tbody tr:nth-child(even) td {
-    background-color: var(--color3);
-}
-
 
 /***************************** FOOTER *****************************/
 footer {
