Fixes for W03 Assignment

--- a/chamber/styles/base-small.css
+++ b/chamber/styles/base-small.css
@@ -130,6 +130,9 @@ section.body h1 {
     font-weight: 700;
     font-size: 1.6rem;
 }
+strong.highlight {
+    color: var(--color1);
+}
 
 /***************************** BOX *****************************/
 section.box {
