--- a/styles/small.css
+++ b/styles/small.css
@@ -125,6 +125,40 @@ main h1 {
     font-weight: 700;
 }
 
+dialog {
+    background-color: white;
+    max-width: 600px;
+    max-height: 400px;
+    margin: auto auto;
+}
+dialog h2 {
+    background-color: var(--color1);
+    color: var(--color1-text);
+    font-weight: 700;
+    padding: 4px 8px;
+}
+dialog p {
+    padding: 4px 8px;
+    margin: 10px;
+}
+dialog button {
+    display: block;
+    background-color: var(--color1);
+    color: var(--color1-text);
+    font-weight: 700;
+    padding: 4px 8px;
+    border: solid 2px black;
+    border-radius: 10px;
+    margin: 10px auto;
+}
+dialog button:hover {
+    background-color: var(--color2);
+    color: var(--color2-text);
+}
+::backdrop {
+    background-color: #000000dd;
+}
+
 /***************************** SECTIONS *****************************/
 section {
     display: grid;
