Initial commit for Final Project

--- a/final/styles/base-small.css
+++ b/final/styles/base-small.css
@@ -35,65 +35,270 @@ footer {
     min-width: 300px;
 }
 
+::backdrop {
+    background-color: #000000aa;
+}
+
+div.center {
+    text-align: center;
+}
+
 /***************************** HEADER *****************************/
 header {
+    display: grid;
+    position: relative;
+    grid-template-columns: 60px auto 44px;
     background-color: var(--color2);
-    padding: 10px 20px;
+    padding: 5px 0;
+    align-items: center;
+    column-gap: 10px;
+    min-height: 45px;
 }
-header h1 {
-    color: var(--color2-text);
+
+header img {
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 2px;
+    margin-left: 10px;
+}
+
+header span {
+    font-size: 1.2rem;
+    color: white;
+}
+
+header nav {
+    display: none;
+    position: absolute;
+    box-sizing: border-box;
+    flex-direction: column;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--color1);
+    z-index: 1;
+}
+
+header nav.show {
+    display: flex;
+}
+
+header nav a {
+    display: block;
+    padding: 12px 16px;
+    color: var(--color1-text);
+    border-bottom: solid 2px black;
+    text-decoration: none;
     font-weight: 700;
+}
+
+header nav a:first-child {
+    border-top: solid 2px black;
+}
+
+header nav a.current,
+header nav a:hover {
+    background-color: var(--color2);
+}
+
+header > img {
+    border-radius: 10px;
+}
+
+
+/***************************** HAMBURGER *****************************/
+.hamburger {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.hamburger::after {
+    content: "\2630";
     font-size: 1.5rem;
 }
 
+.hamburger.show::after {
+    content: "\00D7";
+}
 
 /***************************** MAIN *****************************/
 main {
     display: flex;
     flex-direction: column;
 }
-section {
-    padding: 10px 20px;
+section.body {
+    display: grid;
+    padding: 6px 12px;
+    grid-template-columns: auto;
+    row-gap: 10px;
 }
-section h2 {
+
+section.body h1 {
+    margin: 0;
     color: var(--color1);
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 1.6rem;
 }
-section p {
-    margin-bottom: 10px;
+strong.highlight {
+    color: var(--color1);
 }
-section ul {
-    padding: 0 0 0 20px;
+
+/***************************** BOX *****************************/
+section.box {
+    background-color: white;
+    border: solid 2px black;
+    border-radius: 10px;
 }
-section div.color {
-    padding: 20px;
-    border: solid 1px black;
-    text-align: center;
-    width: 100px;
-    height: 50px;
-    margin: 10px auto;
-}
-section div.color1 {
-    background-color: var(--color1);
-    color: var(--color1-text);
-}
-section div.color2 { 
+section.box > h2 {
     background-color: var(--color2);
-    color: var(--color2-text);
+    color: white;
+    font-weight: 700;
+    padding: 4px 8px;
+    border-bottom: solid 1px black;
+    border-radius: 8px 8px 0 0;
 }
-section div.color3 {
-    background: var(--color3);
-    color: var(--color3-text);
+section.box div {
+    padding: 4px 8px;
 }
-section p.color {
-    text-align: center;
+section.box div.no_padd {
+    padding: 0;
 }
-section img {
-    display: block;
+section.box p:not(:first-child) {
+    margin-top: 20px;
+}
+
+/***************************** RECIPE BOX *****************************/
+
+section.recipe img {
     width: 100%;
     height: auto;
 }
-strong {
+section.recipe p {
+    padding: 4px 8px;
+    margin-top: 0 !important;
+    font-style: italic;
+}
+section.recipe button {
+    grid-area: button;
+}
+dialog.recipe {
+    max-width: 500px;
+}
+dialog.recipe img {
+    width: 100%;
+    height: auto;
+}
+dialog.recipe p {
+    padding: 4px 8px;
+    font-style: italic;
+}
+dialog.recipe strong {
+    padding: 4px 8px;
+}
+dialog.recipe ul,
+dialog.recipe ol {
+    padding-left: 50px;
+}
+
+/***************************** DIALOG BOX *****************************/
+dialog {
+    width: 80%;
+    min-width: 300px;
+    margin: auto auto;
+    border: solid 2px black;
+    border-radius: 10px;
+}
+dialog h2 {
+    background-color: var(--color2);
+    color: var(--color2-text);
     font-weight: 700;
+    padding: 4px 8px;
+    border-bottom: solid 2px black;
+}
+dialog div {
+    padding: 4px 8px;
+}
+dialog div p:not(:first-child) {
+    margin-top: 20px;
+}
+dialog div strong {
+    color: var(--color1);
+}
+dialog div ul li {
+    padding-left: 20px;
+}
+
+/***************************** DIALOG BOX *****************************/
+button.main,
+a.main {
+    display: block;
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 4px 8px;
+    background-color: var(--color2);
+    color: var(--color2-text);
+    font-weight: 700;
+    margin: 10px auto;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+}
+button.main:hover,
+a.main:hover {
+    background-color: var(--color2-text);
+    color: var(--color2);
+}
+button.main2 {
+    display: block;
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 4px 8px;
+    background-color: var(--color1);
+    color: var(--color1-text);
+    font-weight: 700;
+    margin: 10px auto;
+    cursor: pointer;
+}
+button.main2:hover {
+    background-color: var(--color1-text);
+    color: var(--color1);
+}
+
+/***************************** FOOTER *****************************/
+footer {
+    min-height: 50px;
+    background-color: var(--color1);
+    color: var(--color1-text);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    padding: 8px 16px;
+    border-top: solid 2px black;
+}
+
+footer div {
+    margin: 10px 0;
+}
+
+footer nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+
+footer nav a img {
+    width: 44px;
+    height: auto;
+}
+
+footer p,
+footer p span {
+    text-align: center;
+    font-size: 0.8rem;
 }
