--- a/final/styles/base-larger.css
+++ b/final/styles/base-larger.css
@@ -1,41 +1,55 @@
-@media only screen and (min-width: 34rem) {
+@media only screen and (min-width: 38rem) {
 
     header,
     main,
     nav,
     footer {
         box-sizing: border-box;
-        max-width: 650px;
+        max-width: 900px;
         margin: 0 auto;
     }
 
-    /***************************** MAIN *****************************/
-    div.color-list {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+    /***************************** HEADER *****************************/
+    header {
+        grid-template-columns: 60px auto;
+        row-gap: 10px;
+        padding-bottom: 0;
     }
-    div.color1 {
-        grid-column: 1/2;
-        grid-row: 1/2;
+
+    header nav {
+        display: flex;
+        position: initial;
+        top: initial;
+        left: initial;
+        grid-column: 1/3;
+        flex-direction: row;
+        justify-content: space-around;
+        border-top: solid 2px black;
+        border-bottom: solid 2px black;
     }
-    div.color2 {
-        grid-column: 2/3;
-        grid-row: 1/2;
+
+    header nav a {
+        border: none;
     }
-    div.color3 {
-        grid-column: 3/4;
-        grid-row: 1/2;
+
+    header nav a:first-child {
+        border: none;
     }
-    p.color1 {
-        grid-column: 1/2;
-        grid-row: 2/3;
+
+    .hamburger {
+        display: none;
     }
-    p.color2 {
-        grid-column: 2/3;
-        grid-row: 2/3;
+
+    /***************************** RECIPE *****************************/
+    section.recipe img {
+        transition: border-radius 1s ease, filter 1s ease;
     }
-    p.color3 {
-        grid-column: 3/4;
-        grid-row: 2/3;
+    section.recipe img:hover {
+        border-radius: 200px;
+        filter: saturate(250%);
+    }
+    /***************************** FOOTER *****************************/
+    footer {
+        flex-direction: row;
     }
 }
